WP-9010 Fixing the last single pixel that was out of alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -9284,6 +9284,13 @@ input.signup-submit:hover {
   }
 }
 
+@media (min-width: 74.9375em) {
+  .page-seed #navigation,
+  .page-exec-ed #navigation {
+    margin-right: 0;
+  }
+}
+
 @media (max-width: 37.4375em) {
   .page-insights #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2 .awemenu-bars {
     right: 0;
@@ -9922,6 +9929,12 @@ input.signup-submit:hover {
     right: 15px;
   }
 }
+@media (max-width: 1199px) and (min-width: 1169px) {
+  .page-seed div.search-open .global-search {
+    margin-top: -10px;
+    margin-right: 0;
+  }
+}
 
 @media (min-width: 73.125em) {
   .page-exec-ed .global-search {
@@ -10311,7 +10324,7 @@ input.signup-submit:hover {
 #search-touch-button:hover {
   text-decoration: none;
 }
-@media (min-width: 37.5em) and (max-width: 74.9375em) {
+@media (max-width: 74.9375em) {
   #search-touch-button {
     background: url(../images/icons/icon-search-white-54x54-tablet-mobile.png) no-repeat center/42% #990000;
     display: inline-block;
