--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -134,6 +134,10 @@
     +breakpoint($bp-for-tablet-range)
       right: 0
       margin-right: 50px
+.page-seed #navigation,
+.page-exec-ed #navigation
+  +breakpoint(1199px min-width)
+    margin-right: 0
 .page-insights
   #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2
     .awemenu-bars
@@ -544,11 +548,11 @@ div#header-wrapper.awemenu-sticky + div#hero
       position: absolute
       top: 3px
       right: 15px
-  @media (max-width: 1200px) and (min-width: 1169px)
+  @media (max-width: 1199px) and (min-width: 1169px)
     div.search-open
       .global-search
-        margin-top: -4px
-        margin-right: -15px
+        margin-top: -10px
+        margin-right: 0
 .page-exec-ed
   .global-search
     +breakpoint(1170px min-width)
@@ -776,7 +780,7 @@ div#header-wrapper.awemenu-sticky + div#hero
   width: 64px
   &:hover
     text-decoration: none
-  +breakpoint($bp-for-tablet-range)
+  +breakpoint(1199px max-width)
     background: url(../images/icons/icon-search-white-54x54-tablet-mobile.png) no-repeat center/42% $red
     display: inline-block
     position: absolute
